<resources>
    <string name="app_name" translatable="false">PolideportivoUES</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Polideportivo UES</string>
    <string name="nav_header_subtitle">PDM115-2022-G10</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">PolideportivoUES</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login_title">Login</string>
    <string name="user">Usuario</string>
    <string name="clave">Clave</string>
    <string name="registro">Click aqui para Registrarte</string>
    <string name="registro_title">Registrarse</string>
    <string name="confirmar_clave">Confirmar clave</string>
    <string name="botonConsultar">Consultar</string>
    <string name="botonActualizar">Actualizar</string>
    <string name="botonAgregar">Agregar</string>
    <string name="botonVaciar">Vaciar</string>
    <string name="btnGuardar">Guardar</string>
    <string name="botonEliminar">Eliminar</string>
    <string name="Horaidentificador">Id de Hora</string>
    <string name="InicioHora">Hora Inicio</string>
    <string name="FinHora">Hora Fin</string>
    <string name="hintId">Ingrese el Numero de Hora</string>
    <string name="hintHI">Ingrese la hora de inicio</string>
    <string name="hintHF">Ingrese la hora de finalización</string>
    <string name="botonAgregarHoraInicio">Hora</string>
    <string name="inicioH">Hora de Inicio</string>
    <string name="finH">Hora de Finalización</string>
    <string name="titulo_hora_insertar">Insertar Hora</string>
    <string name="titulo_hora_editar">Actualizar Hora</string>
    <string name="titulo_hora_consultar">Consultar Hora</string>
    <string name="titulo_hora_eliminar">Eliminar Hora</string>
    <string name="hora">Hora</string>
    <string name="tipoEvento">Tipo de Evento</string>
    <string name="titulo_tipo_evento_insertar">Insertar Tipo Evento</string>
    <string name="titulo_tipo_evento_consultar">Consultar Tipo Evento</string>
    <string name="titulo_tipo_evento_actualizar">Actualizar Tipo Evento</string>
    <string name="titulo_tipo_evento_eliminar">Eliminar Tipo Evento</string>
    <string name="idTipoEvento">Id del tipo evento:</string>
    <string name="NomTipoEvento">Nombre del tipo de evento:</string>
    <string name="cobro">Cobro</string>
    <string name="titulo_cobro_insertar">Insertar cobro</string>
    <string name="titulo_cobro_consultar">Consultar cobro</string>
    <string name="titulo_cobro_actualizar">Actualizar cobro</string>
    <string name="titulo_cobro_eliminar">Eliminar cobro</string>
    <string name="idCobro">Id del cobro:</string>
    <string name="TipoPago">Tipo de pago:</string>
    <string name="cantPersonas">Cantidad de personas:</string>
    <string name="duracion">Duración:</string>
    <string name="precios">Precio:</string>
    <string name="time_picker_title">Seleccione la duración</string>
    <string name="dia">Dia</string>
    <string name="titulo_dia_insertar">Insertar dia</string>
    <string name="titulo_dia_consultar">Consultar dia</string>
    <string name="titulo_dia_actualizar">Actualizar dia</string>
    <string name="titulo_dia_eliminar">Eliminar dia</string>
    <string name="oldDia">Dia actual:</string>
    <string name="newDia">Dia nuevo:</string>
    <string name="titulo_nav_local">Local</string>
    <string name="agregarLocal">Agregar Local</string>
    <string name="idLocaltxt">Id de local</string>
    <string name="hintIdLocal">Ingrese el Id del local</string>
    <string name="nombreLocaltxt">Nombre del local</string>
    <string name="hintnombreLocal">Ingrese el nombre del local</string>
    <string name="cupoLocaltxt">Cupo del local</string>
    <string name="hintcupoLocal">Ingrese el cupo del local</string>
    <string name="actualizarLocal">Actualizar Local</string>
    <string name="eliminarLocal">Eliminar Local</string>
    <string name="consultarLocal">Consultar Local</string>
    <string name="AgregarHoraFragment">Agregar Hora</string>
    <string name="ConsultarHoraFragment">Consultar Hora</string>
    <string name="EliminarHoraFragment">Eliminar Hora</string>
    <string name="ActualizarHoraFragment">Actualizar Hora</string>
    <string name="AgregarTipoPagoFragment">Agregar Tipo de Pago</string>
    <string name="EliminarTipoPagoFragment">Eliminar Tipo de Pago</string>
    <string name="ActualizarTipoPagoFragment">Actualizar Tipo de Pago</string>
    <string name="ConsultarTipoPagoFragment">Consultar Tipo Pago</string>
    <string name="TipoPagoIdentificador">Codigo Tipo de Pago</string>
    <string name="TipoPagoNombreTipo">Tipo de Pago</string>
    <string name="hintIdePago">Ingrese el codigo del tipo pago</string>
    <string name="hintTipoPago">Ingrese el tipo de pago</string>
    <string name="titulo_tipoPago_insertar">Insertar Tipo Pago</string>
    <string name="titulo_tipoPago_editar">Actualizar Tipo Pago</string>
    <string name="titulo_tipoPago_consultar">Consultar Tipo Pago</string>
    <string name="titulo_tipoPago_eliminar">Eliminar Tipo Pago</string>
    <string name="tipo_pago">Tipo Pago</string>
    <string name="AgregarEventoFragment">Agregar Evento</string>
    <string name="ConsultarEventoFragment">Consultar Evento</string>
    <string name="EliminarEventoFragment">Eliminar Evento</string>
    <string name="ActualizarEventoFragment">Actualizar Evento</string>
    <string name="NumEvenTxt">N° de Evento</string>
    <string name="TiEventTxt">Tipo de Evento</string>
    <string name="NomEventTxt">Nombre del Evento</string>
    <string name="costoEventTxt">Costo del Evento</string>
    <string name="cantAutEventTxt">Cantidad Autorizada para el evento</string>
    <string name="NumeroEventoHint">Ingrese el numero de evento</string>
    <string name="NombreEventoHint">Ingrese el nombre del evento</string>
    <string name="CostoEventoHint">Ingrese el costo del evento</string>
    <string name="CantidadAutorizadaHint">Ingrese la cantidad de personas autorizadas</string>
    <string name="Hint_cantAutorizada">Ingrese cantidad autorizada</string>
    <string name="titulo_evento_insertar">Insertar Evento</string>
    <string name="titulo_evento_editar">Actualizar Evento</string>
    <string name="titulo_evento_consultar">Consultar Evento</string>
    <string name="titulo_evento_eliminar">Eliminar Evento</string>
    <string name="evento">Evento</string>
    <string name="btnLimpiar">Limpiar</string>
    <string name="titulo_nav_reservacion">Reservación</string>
    <string name="label_reservacion">Reservación</string>
    <string name="titulo_reservacion_insertar">Agregar Reservación</string>
    <string name="titulo_reservacion_consultar">Consultar Reservación</string>
    <string name="titulo_reservacion_eliminar">Eliminar Reservación</string>
    <string name="titulo_reservacion_actualizar">Actualizar Reservación</string>
    <string name="id_Cobro">Cobro:</string>
    <string name="id_Persona">Persona</string>
    <string name="Hint_idReservacion">Id de reservación</string>
    <string name="Hint_id_HorarioLocal">Local y Horario</string>
    <string name="Hint_id_Cobro">Id del cobro</string>
    <string name="Hint_id_Persona">Persona</string>
    <string name="Hint_TipoReservacion">Tipo de reservación</string>
    <string name="Hint_id_Evento">Evento</string>
    <string name="Hint_id_PeriodoReserva">Periodo de reserva</string>
    <string name="Hint_fechaRegistro">Fecha de registro</string>
    <string name="titulo_nav_periodoReserva">Periodo de Reserva</string>
    <string name="label_periodoReserva">Periodo de Reserva</string>
    <string name="titulo_periodoreserva_insertar">Agregar Periodo de Reserva</string>
    <string name="titulo_periodoreserva_consultar">Consultar Periodo de Reserva</string>
    <string name="titulo_periodoreserva_eliminar">Eliminar Periodo de Reserva</string>
    <string name="titulo_periodoreserva_actualizar">Actualizar Periodo de Reserva</string>
    <string name="Hint_idperiodoReserva">Ingresar id del periodo de reserva</string>
    <string name="Hint_fechaInicio">Ingresar fecha de inicio</string>
    <string name="Hint_fechaFin">Ingresar fecha fin</string>
    <string name="titulo_nav_nacionalidad">Nacionalidad</string>
    <string name="label_nacionalidad">Nacionalidad</string>
    <string name="titulo_Nacionalidad_insertar">Agregar Nacionalidad</string>
    <string name="titulo_Nacionalidad_consultar">Consultar Nacionalidad</string>
    <string name="titulo_Nacionalidad_eliminar">Eliminar Nacionalidad</string>
    <string name="titulo_Nacionalidad_actualizar">Actualizar Nacionalidad</string>
    <string name="Hint_codNacionalidad">Ingrese el código del país</string>
    <string name="Hint_nacionalidad">Nacionalidad</string>
    <string name="titulo_nav_horariosDisponibles">Horarios Disponibles</string>
    <string name="AgregarHorararioDisponibleFragment">Agregar Disponibilidad</string>
    <string name="EliminarHorararioDisponibleFragment">Eliminar Disponibilidad</string>
    <string name="ConsultarHorararioDisponibleFragment">Consultar Disponibilidad</string>
    <string name="ActualizarHorararioDisponibleFragment">Actualizar Disponibilidad</string>
    <string name="idHorario">Id Disponibilidad</string>
    <string name="idHora">Hora</string>
    <string name="nombreDia">Día</string>
    <string name="titulo_nav_persona">Persona</string>
    <string name="AgregarPersonaFragment">Agregar Persona</string>
    <string name="EliminarPersonaFragment">Eliminar Persona</string>
    <string name="ConsultarPersonaFragment">Consultar Persona</string>
    <string name="ActualizarPersonaFragment">Actualizar Persona</string>
    <string name="NombrePersona">Nombre:</string>
    <string name="ApellidoPersona">Apellido:</string>
    <string name="GeneroPersona">Género:</string>
    <string name="DUIPersona">DUI:</string>
    <string name="NacimientoPersona">Fecha de Nacimiento:</string>
    <string name="NacionalidadPersona">Nacionalidad:</string>
    <string name="DireccionPersona">Dirección:</string>
    <string name="EmailPersona">Correo eléctronico:</string>
    <string name="TelefonoPersona">Teléfono:</string>
    <string name="titulo_nav_genero">Género</string>
    <string name="AgregarGeneroFragment">Agregar Género</string>
    <string name="EliminarGeneroFragment">Eliminar Género</string>
    <string name="ConsultarGeneroFragment">Consultar Género</string>
    <string name="ActualizarGeneroFragment">Actualizar Género</string>
    <string name="idGenero">Id Género:</string>
    <string name="genero">Género:</string>
    <string name="titulo_nav_tipoReservacion">Tipo de Reservacion</string>
    <string name="idTipoReservaciontxt">Id del tipo de reservacion</string>
    <string name="hintIdTipoReservacion">Ingrese el Id del tipo de reservacion</string>
    <string name="nombreTipoReservaciontxt">Nombre del tipo de reservacion</string>
    <string name="hintnombreTipoReservacion">Ingrese el nombre del tipo de reservacion</string>
    <string name="agregarTipoReservacion">Agregar tipo de reservacion</string>
    <string name="consultarTipoReservacion">Consultar tipo de reservacion</string>
    <string name="actualizarTipoReservacion">Actualizar tipo de reservacion</string>
    <string name="titulo_nav_horariosLocales">Horarios Locales</string>
    <string name="web_services">Web Services</string>
    <string name="id_Reservacion">Id reservacion</string>
    <string name="TipoReservacion">Tipo de reserva</string>
    <string name="id_Evento">Evento</string>
    <string name="id_PeriodoReserva">Periodo de reserva</string>
    <string name="fechaRegistro">fecha de registro</string>
</resources>