<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_polideportivo"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_webservice"
            android:icon="@drawable/ic_polideportivo"
            android:title="@string/web_services" />

        <item
            android:id="@+id/nav_reservacion"
            android:icon="@drawable/ic_menu_reservacion"
            android:title="@string/titulo_nav_reservacion"/>

        <item
            android:id="@+id/nav_persona"
            android:icon="@drawable/ic_menu_persona"
            android:title="@string/titulo_nav_persona"/>

        <item
            android:id="@+id/nav_evento"
            android:icon="@drawable/ic_evento"
            android:title="@string/evento"/>

        <item
            android:id="@+id/nav_local"
            android:icon="@drawable/ic_menu_local"
            android:title="@string/titulo_nav_local" /> <!--Strings-->

        <item
            android:id="@+id/nav_periodoReserva"
            android:icon="@drawable/ic_menu_periodoreserva"
            android:title="@string/titulo_nav_periodoReserva"/>

        <item
            android:id="@+id/nav_horarios_disponibles"
            android:icon="@drawable/ic_menu_horarios_disponibles"
            android:title="@string/titulo_nav_horariosDisponibles"/>

        <item
            android:id="@+id/nav_hora"
            android:icon="@drawable/ic_time"
            android:title="@string/hora" />

        <item
            android:id="@+id/nav_tipoevento"
            android:icon="@drawable/ic_tipo_evento"
            android:title="@string/tipoEvento" />

        <item
            android:id="@+id/nav_cobro"
            android:icon="@drawable/ic_money"
            android:title="@string/cobro"/>

        <item
            android:id="@+id/nav_tipoPago"
            android:icon="@drawable/ic_tp"
            android:title="@string/tipo_pago" />
        <item
            android:id="@+id/nav_tipoReservacion"
            android:icon="@drawable/ic_menu_tiporeservacion"
            android:title="@string/titulo_nav_tipoReservacion" />
        <item
            android:id="@+id/nav_horarios_locales"
            android:icon="@drawable/ic_calendario_local"
            android:title="@string/titulo_nav_horariosLocales" />

        <item
            android:id="@+id/nav_genero"
            android:icon="@drawable/ic_genere"
            android:title="@string/titulo_nav_genero"/>

        <item
            android:id="@+id/nav_nacionalidad"
            android:icon="@drawable/ic_menu_nacionalidad"
            android:title="@string/titulo_nav_nacionalidad"/>

        <item
            android:id="@+id/nav_dia"
            android:icon="@drawable/ic_day"
            android:title="@string/dia"/>

    </group>
</menu>