<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".William.Local.LocalActualizarActivity"
    android:padding="30dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actualizarLocal"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idLocaltxt"/>

    <EditText
        android:id="@+id/EditIdLocal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintIdLocal"
        android:maxLength="5"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombreLocaltxt"/>

    <EditText
        android:id="@+id/EditNombreLocal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintnombreLocal"
        android:maxLength="50"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cupoLocaltxt"
        android:inputType="number"/>

    <Spinner
        android:id="@+id/SpinnerCupoLocal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintcupoLocal"
        android:entries="@array/cupoLocal"
        />
    <Button
        android:id="@+id/botonActualizarLocal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/botonActualizar"/>

</LinearLayout>