<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/titulo_reservacion_insertar"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:text="@string/id_Reservacion"/>

        <EditText
            android:id="@+id/idReservacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="6"
            android:hint="@string/Hint_idReservacion"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:text="@string/id_Cobro"/>

        <EditText
            android:id="@+id/idCobro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="6"
            android:minHeight="48dp"
            android:hint="@string/Hint_id_Cobro"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:text="@string/id_Persona"/>
        <EditText
            android:id="@+id/idPersona"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="9"
            android:hint="@string/Hint_id_Persona"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:text="@string/TipoReservacion"/>
        <Spinner
            android:id="@+id/editText_idTipoReservacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/TipoReservacion"
            android:hint="@string/Hint_TipoReservacion"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:text="@string/id_Evento"/>
        <EditText
            android:id="@+id/idEvento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="6"
            android:hint="@string/Hint_id_Evento"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:text="@string/id_PeriodoReserva"/>
        <EditText
            android:id="@+id/idPeriodoReserva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="6"
            android:hint="@string/Hint_id_PeriodoReserva"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:text="@string/fechaRegistro"/>
        <EditText
            android:id="@+id/et_FechaR"
            android:hint="@string/Hint_fechaRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:focusable="false"
            android:clickable="true"
            android:maxLines="1" />
        <LinearLayout
            android:id="@+id/linearLayoutButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right">
            <Button
                android:id="@+id/botonAgregarReservacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/botonAgregar"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/botones"/>
            <Button
                android:id="@+id/botonLimpiar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/btnLimpiar"
                android:textColor="@color/black"
                android:backgroundTint="@color/botones"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
