<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/titulo_hora_editar"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/Horaidentificador"/>

    <EditText
        android:id="@+id/EditIdHoraActualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintId"
        android:inputType="text"
        android:maxLength="4"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/InicioHora"/>

    <EditText
        android:id="@+id/EditHoraInicioActualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintHI"
        android:inputType="time"
        android:enabled="false"/>

    <Button
        android:id="@+id/horaInicioPickerActualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:textColor="@color/black"
        android:backgroundTint="@color/botones"
        android:text="@string/inicioH"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FinHora"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/EditHoraFinActualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintHF"
        android:enabled="false"/>

    <Button
        android:id="@+id/horaFinalizarPickerActualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:textColor="@color/black"
        android:backgroundTint="@color/botones"
        android:text="@string/finH"/>

    <Button
        android:id="@+id/botonActualizarHora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:textColor="@color/black"
        android:backgroundTint="@color/botones"
        android:text="@string/botonActualizar"/>





</LinearLayout>