<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".William.TipoReservacion.TipoReservacionActualizarActivity"
    android:padding="30dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actualizarTipoReservacion"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idTipoReservaciontxt"/>

    <EditText
        android:id="@+id/EditIdLocal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintIdTipoReservacion"
        android:maxLength="1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombreTipoReservaciontxt"/>

    <EditText
        android:id="@+id/EditNombreLocal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintnombreTipoReservacion"
        android:maxLength="50"
        />
    <Button
        android:id="@+id/botonActualizarTipoReservacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/botonActualizar"/>

</LinearLayout>